2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.2.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0.1 release.

	* CHANGES: Updated.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_is_user_admin): Make check for
	administrative privileges stricter; isadmin is expected to be a
	regular file.

2011-02-15  Chandrashekhar B <bchandra@secpod.com>

	* misc/pcap.c (v6_getinterfaces): Fixed a segfault issue
	when null ifaddrs struct is encountered.

2011-02-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Replace call to deprecated exec_program with
	execute_process.

2011-02-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Fix date.

2011-02-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Further consolidation: Move common checks in submodules to top-level
	CMakeLists.txt so they are only executed once. Improve pkg-config
	support.

	* hg/CMakeLists.txt, base/CMakeLists.txt, nasl/CMakeLists.txt,
	misc/CMakeLists.txt, omp/CMakeLists.txt: Remove checks for glib and
	gpgme flags since they are now done by the top-level CMakeLists.txt.

	* CMakeLists.txt: Make sure flags for glib and gpgme are set. Add
	gpgme flags to EXTRA_LIBS and EXTRA_CFLAGS so pkg-config sees them.

	* libopenvas.pc.in: Add EXTRA_LIBS and EXTRA_CFLAGS to care for
	libraries which are not yet pkg-config compliant.

2011-02-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_logging.c (openvas_log_func): Correct typo in format.

2011-02-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0.1.

2011-02-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Updated.
