@@ -263,6 +263,12 @@ install (FILES libopenvas.pc
 install (FILES openvas-services DESTINATION ${OPENVAS_DATA_DIR}
          PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
 
+install (FILES tools/openvas-lsc-rpm-creator.sh
+         DESTINATION ${OPENVAS_DATA_DIR}
+         PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
+                     GROUP_READ GROUP_EXECUTE
+                     WORLD_READ WORLD_EXECUTE)
+
 install (DIRECTORY DESTINATION ${OPENVAS_USERS_DIR})
 install (DIRECTORY DESTINATION ${OPENVAS_LOG_DIR})
 install (DIRECTORY DESTINATION ${OPENVAS_DATA_DIR})
