@@ -1,3 +1,8 @@
+2011-02-22  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* CMakeLists.txt: Ensure that tools/openvas-lsc-rpm-creator.sh gets
+	installed to the location OpenVAS Manager expects it to be.
+
 2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
